# DAISY

./: .gitmodules  DatasetBalanceFinal.R  README.md  dataBalaance.ipynb  image_arg.py
CAD/: ReadMe.txt
Dashboard/Backend/: Dockerfile  docker-compose.yaml  predictions.txt  pyproject.toml
Dashboard/Backend/app/: main.py  tables.py
Dashboard/Backend/app/tests/: conftest.py
Dashboard/Backend/inference_service/: main.py  repositories.py  schemas.py  settings.py  tables.py
Dashboard/Backend/inference_service/omar_dir/: alexnet.py  densenet121.py  inaturalist.py  inceptionv3.py  inference.py  plantnet.py  resnet.py  serialisation.py  validate.py  vgg16.py
Dashboard/Backend_deploy/: Dockerfile  docker-compose.yaml  pyproject.toml
Dashboard/Frontend/: README.md  package-lock.json  package.json
Dashboard/Maps/: GJSON.geojson
Dataset/: README.md
Dataset/Balancing_Maxwell/: DatasetBalance2.R  blur.py
Dataset/CSV/: README.md  dataV5_augmented.csv  dataV6_aug.csv  dataset-v3.csv  dataset-v4.csv  test_data.csv
Dataset/Labelling_Scripts_Francesco/: plantnet_looping.ipynb
Firmware/: Camera.h  Daisy.h  GPS.cpp  GPS.h  SDCard.h  camera_index.h
Firmware/main/: Accelerometer.cpp  Accelerometer.h  Camera.cpp  Daisy.cpp  Daisy.h  SDCard.cpp  main.ino
Model/: README.md
Model/HPC/: ensemble_grid.job  ensemble_grid2.job  ensemble_grid_0.job  run.job  run.sh  setup.sh  setup_gpu.sh  test_ensemble.job  test_ensemble.sh  test_ensemble2.sh  test_ensemble2_gpu.sh  test_train.job  test_train.sh  test_train2.sh  train_grid.job  train_grid_alexnet.job  train_grid_best.job  (+44 more)
(+114 files in other folders)
